samples/_failures_safe/1761490049_339439_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52b97c2a.c: In function ‘main’:
./samples/SAFE/__tmp_52b97c2a.c:154:28: error: missing terminating " character
  154 |                     printf("Error:
      |                            ^~~~~~~
./samples/SAFE/__tmp_52b97c2a.c:154:21: error: expected expression at end of input
  154 |                     printf("Error:
      |                     ^~~~~~
./samples/SAFE/__tmp_52b97c2a.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52b97c2a.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52b97c2a.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52b97c2a.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52b97c2a.c:154:21: error: expected declaration or statement at end of input
